# gym-git

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: config.yml  log-workout.yml  t0.md  t1.yml  t2.yml  t3.yml  t4.yml  t5.yml
.github/workflows/: daily-quest.yml  process-workout.yml
config/: irongraph.yml
data/: achievements.json  graph.json  ingested.json  personal-records.json  profile.json
data/registry/: custom-exercises.json  exercises.json  videos.json
data/workouts/2026/: 2026-07-12--issue-1.json  2026-07-15--issue-5.json
docs/: ai.md  architecture.md  contribution-attribution.md  dashboard.md  data-schema.md  setup.md  workflows.md
irongraph/: __init__.py  achievements.py  ai.py  analytics.py  commitmsg.py  config.py  formgen.py  gamify.py  gitcommit.py  graphbuild.py  ingest.py  models.py  parser.py  paths.py  quest.py  readmegen.py  rebuild.py  records.py  registry.py  sprites.py  streaks.py  svggen.py  videos.py
irongraph/server/: __init__.py  __main__.py  app.py
tests/: conftest.py  test_e2e_dashboard.py  test_e2e_user_journey.py  test_engine.py  test_formgen.py  test_ingest.py  test_parser.py  test_pipeline.py  test_server.py  test_sprites.py
tests/fixtures/: abs_day.md  cardio_day.md  custom_exercise.md  kg_day.md  malformed.md  mixed_day.md  strength_day.md
web/: app.js  graph.js  index.html  style.css
