[project]
name = "irongraph"
version = "0.1.0"
description = "Build strength. Commit progress. A Git-native, gamified record of physical training."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Ashish Kurse", email = "ashishkurse@gmail.com" }]
dependencies = [
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
ai = ["google-genai>=1.0"]
dev = ["pytest>=8.0", "ruff>=0.4", "mypy>=1.9", "httpx>=0.27"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = { find = { include = ["irongraph*"] } }

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
ignore = ["E501", "B905", "B007"]

[tool.ruff.lint.per-file-ignores]
"irongraph/graphbuild.py" = ["E702"]  # compact force-layout math

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
check_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
